# telegram-transcription-bot

./: .env  .funcignore  .gitignore  .mise.toml  Dockerfile  README.md  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: main.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: bot.yaml  config.yaml  db-config.yaml  secrets.yaml
handover/: __init__.py
process/: __init__.py
src/bot/: app.py  bot.py  config.py  conversion.py  init.py  localization.py  speech.py  state.py  telemetry.py  tracing.py  usage.py
src/bot/handover/: __init__.py  function.json
src/bot/process/: __init__.py  function.json
terraform/: .terraform.lock.hcl  bot.tf  bot_vars.tf  providers.tf
