[project]
requires-python = "==3.14.*"
name = "bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "azure-core ==1.38.*",
    "azure-core-tracing-opentelemetry",
    "azure-cognitiveservices-speech ==1.47.*",
    "bs-config [dotenv] ==4.0.0",
    "bs-nats-updater ==4.0.0",
    "bs-rate-limiter [postgres,opentelemetry-postgres] ==9.0.0",
    "bs-state [redis] ==4.0.*",
    "click >=8, <9",
    "opentelemetry-api ==1.39.*",
    "opentelemetry-sdk ==1.39.*",
    "opentelemetry-exporter-otlp-proto-grpc ==1.39.*",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "python-telegram-bot ==22.5",
    "sentry-sdk >=2, <3",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest >=9, <10",
    "ruff ==0.14.14",
]

[[tool.uv.index]]
name = "internal"
url = "https://code.bjoernpetersen.net/api/packages/BjoernPetersen/pypi/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-rate-limiter = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.mypy]
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]
